if(NOT TARGET certificate_authority)
    message(STATUS "ca_service: skipped (requires OpenSSL)")
    return()
endif()
if(NOT TARGET httplib::httplib OR NOT TARGET boost_json)
    message(STATUS "ca_service: skipped (requires httplib and boost_json)")
    return()
endif()

add_executable(ca_service main.cpp)
target_include_directories(ca_service PRIVATE "${CMAKE_SOURCE_DIR}/include")
target_link_libraries(ca_service PRIVATE certificate_authority httplib::httplib boost_json)
if(TARGET aws-cpp-sdk-acm-pca)
    target_link_libraries(ca_service PRIVATE aws-cpp-sdk-acm-pca)
endif()
target_compile_features(ca_service PRIVATE cxx_std_23)
set_target_properties(ca_service PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
message(STATUS "ca_service target: enabled")
